--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -12,10 +12,12 @@
   margin: 0 auto;
   position: relative;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .project-card {
-  width: 85%;
+  width: 35%;
   margin: 50px auto;
   display: flex;
   flex-direction: column;
