--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -65,7 +65,7 @@ header {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: var(--pink-text);
+    background-color: var(--gray-bg);
     transition: 0.25s ease;
 }
 
@@ -76,6 +76,7 @@ header {
 
 .Link {
     text-decoration: none;
+    text-align: center;
 }
 
 
