--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -33,7 +33,7 @@
 .carousel-item {
     min-width: 100vw;
     min-height: 56vw;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 
