--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -8,12 +8,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   box-shadow: 0px 0px 8px 1px var(--pink-text);
   border-radius: 16px;
   border: 1px solid var(--pink-text);
   padding: 16px;
   background-color: var(--pink-text);
   color: var(--gray-bg);
+  text-align: center;
 }
 
 .project-cards-ctr {
@@ -22,12 +24,15 @@
   justify-content: space-around;
 }
 
-.project-card>img {
-  width: 80%;
-  max-height: 60%;
+.project-card img {
+  width: 100%;
+  max-height: 100%;
   object-fit: contain;
 }
 
+.project-card-link {
+  width: 100%;
+}
 
 .iframe-container {
   position: relative;
