--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -2,6 +2,14 @@
   /* border: 1px solid red; */
 }
 
+.project-page {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .project-card {
   width: 25%;
   margin: 8px 16px;
@@ -34,28 +42,19 @@
   width: 100%;
 }
 
-.iframe-container {
+
+.iframe-ctr {
+  padding-bottom: 56.25%;
   position: relative;
-  flex-grow: 1;
-  overflow: hidden;
-  width: 80%;
+  width: 100vw;
 }
 
-.iframe-container::before {
-  content: "";
-  display: block;
-  padding-top: 56.25%;
-  /* 16:9 aspect ratio */
-}
-
-.iframe-container iframe {
-  position: absolute;
+iframe {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  border: 0;
-  border-radius: 8px;
+  position: absolute;
 }
 
 
