--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,34 @@ body {
   color: white;
 }
 
+.button {
+  cursor: pointer;
+  transition: 200ms;
+  color: var(--pink-text);
+  background-color: var(--gray-bg);
+}
+
+.button:hover {
+  transition: 200ms;
+  color: var(--gray-bg);
+  background-color: var(--pink-text);
+}
+
+.button:focus {
+  background-color: black !important;
+  color: white !important;
+}
+
+.button:hover {
+  transition: 200ms;
+  color: var(--gray-bg);
+  background-color: var(--pink-text);
+}
+
+button:focus {
+  background-color: black;
+}
+
 .myh3 {
   font-size: 1.25rem;
 }
@@ -124,12 +152,16 @@ h2 {
 
 
 .link {
-  background: #ef76a2;
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: 300ms;
+  transition: font-weight 100ms;
+
 }
 
+.link:hover {
+  font-weight: 700;
+  color: transparent;
+  -webkit-text-stroke: 1px black;
+  transition: font-weight 200ms;
+}
 
 
 .works:hover {
@@ -141,12 +173,6 @@ h2 {
   -webkit-background-clip: text;
 }
 
-.link:hover {
-  animation: animate 15s linear infinite;
-  color: transparent;
-  transition: 400ms;
-}
-
 .here {
   background: #ef76a2;
   animation: animate 10s linear infinite;
@@ -156,23 +182,6 @@ h2 {
   text-decoration: none;
 }
 
-.frog {
-  position: absolute;
-  top: 100px;
-  left: 500px;
-  display: inline;
-  width: 200px;
-  height: 200px;
-  transition: 500ms ease;
-  z-index: 100;
-}
-
-#frog-text {
-  padding: 0;
-  max-height: 30px;
-  text-align: center;
-  text-shadow: rgb(0, 255, 26) 0px 0px 8px;
-}
 
 @keyframes animate {
 
