--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,15 +1,3 @@
-.socials-ctr img {
-    width: 50px;
-    height: 50px;
-    margin: 0 8px;
-    transition: 200ms;
-}
-
-.socials-ctr img:hover {
-    filter: invert(100%);
-    transition: 200ms;
-}
-
 .my-footer {
     margin: 0 auto;
     display: flex;
@@ -29,27 +17,31 @@
     z-index: 2;
 }
 
+.footer-text {
+    position: absolute;
+    right: 12px;
+    bottom: 0;
+}
+
+
+.socials-ctr img {
+    width: 50px;
+    margin: 0 8px;
+    transition: 200ms;
+}
+
+.socials-ctr img:hover {
+    filter: invert(100%);
+    transition: 200ms;
+}
+
+
 .socials-ctr {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 8px;
-}
-
-input {
-    color: var(--gray-bg);
-}
-
-input::placeholder {
-    color: var(--gray-bg);
-}
-
-button {
-    background-color: var(--gray-bg);
-    color: var(--pink-text);
-    border-radius: 12px;
-    border: 1px solid white;
-    padding: 4px 8px;
+    align-items: center;
 }
 
 .subscribe-text {
