--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ button:hover {
   transition: 200ms;
   color: var(--gray-bg);
   background-color: var(--pink-text);
+  box-shadow: 0px 0px 24px 1px #f9c4ff;
 }
 
 button:focus {
