--- a/src/styles/press.css
+++ b/src/styles/press.css
@@ -33,11 +33,11 @@
 
 .photo-credit {
     position: absolute;
-    margin: 4px 4px;
+    margin: 4px;
     bottom: 0;
     /* width: 100%;
     text-align: center; */
     right: 0;
     background-color: rgba(0, 0, 0, .8);
-    padding: 0 4px;
+    padding: 0 8px;
 }
