--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -24,6 +24,13 @@
   background-color: var(--pink-text);
   color: var(--gray-bg);
   text-align: center;
+  transition: 200ms
+}
+
+
+.project-card:hover {
+  box-shadow: 0px 0px 24px 1px #f9c4ff;
+  transition: 200ms
 }
 
 .project-cards-ctr {
@@ -38,9 +45,6 @@
   object-fit: contain;
 }
 
-.project-card-link {
-  width: 100%;
-}
 
 
 .iframe-ctr {
