--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,18 @@ h2 {
     display: none;
   }
 
+  #scrollpath {
+    display: none;
+  }
+
+  #progressbar {
+    display: none;
+  }
+
+  #progressbar:before {
+    display: none;
+  }
+
 }
 
 /* //////////////////////////////////////////////////////////////////////Scroll Bar/////////// */
