--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -41,3 +41,23 @@
 .subscribe-text {
     color: var(--gray-bg);
 }
+
+.contact-form-ctr {
+    width: 75vw;
+    margin: 0 auto;
+    border-radius: 24px;
+    border: 1px solid white;
+    padding: 16px;
+}
+
+.mail-form-ctr {
+    width: 380px;
+}
+
+@media screen and (max-width: 700px) {
+
+    .mail-form-ctr {
+        width: 280px;
+    }
+
+}
