--- a/src/styles/press.css
+++ b/src/styles/press.css
@@ -21,6 +21,10 @@
     margin: 0 auto;
 }
 
+.quote {
+    text-align: justify;
+}
+
 .author {
     font-style: italic;
 }
@@ -40,4 +44,23 @@
     right: 0;
     background-color: rgba(0, 0, 0, .8);
     padding: 0 8px;
+}
+
+
+@media screen and (max-width: 700px) {
+    span {
+        font-size: .8rem;
+
+    }
+
+    .photo-credit,
+    .photo-credit>span {
+        font-size: .5rem;
+    }
+
+    .quotes-ctr {
+        width: 90vw;
+        margin: 8px auto;
+    }
+
 }
