--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -44,11 +44,21 @@
 }
 
 @media screen and (max-width: 700px) {
-    .bio {
-        font-size: 1rem;
+
+    .about .bio-name {
+        font-size: 3rem;
     }
 
-    .bio-name {
-        font-size: 3rem;
+    .bio {
+        font-size: 1.2rem;
+    }
+
+    .bio-body {
+        flex-direction: column;
+    }
+
+    .bio-body img {
+        width: 75vw;
+        margin-top: 12px;
     }
 }
