--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -57,7 +57,27 @@
 @media screen and (max-width: 700px) {
 
     .mail-form-ctr {
-        width: 280px;
+        width: 90vw;
+    }
+
+    .mail-form-ctr * {
+        font-size: .8rem !important;
+        text-align: center;
+    }
+
+    .contact-form-ctr {
+        border-radius: 24px;
+        border: none;
+        padding: 0;
+        width: 90vw;
+    }
+
+    .footer-text {
+        position: relative;
+    }
+
+    .socials-ctr img {
+        width: 24px;
     }
 
 }
