--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -116,16 +116,17 @@ header {
 .work-content {
     position: relative;
     background: rgba(0, 0, 0, 1);
-    width: 200px;
+    width: 150px;
     min-height: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 15%;
+    border-bottom-left-radius: 2px;
     border: 1px solid var(--pink-text);
 }
 
 .my-dropdown-content {
-    margin: auto;
-    animation: burger-drop 200ms ease-in-out
+    margin-left: auto;
+    animation: burger-drop 300ms ease-in-out;
+    z-index: -10;
 }
 
 
@@ -135,17 +136,19 @@ header {
 
 .burger-link-text {
     display: block;
-    margin: 0.5em;
+    padding: 0 16px;
+    line-height: 1.25rem;
+    margin: 12px 0;
     text-align: center;
-    color: pink;
-    font-size: 24px;
+    color: var(--pink-text);
+    font-size: 18px;
     font-weight: bold;
 }
 
 .work-link-text {
     display: block;
     text-align: center;
-    font-size: 24px;
+    font-size: 12px;
     color: var(--pink-text)
 }
 
@@ -169,21 +172,21 @@ header {
 
 @keyframes work-drop {
     0% {
-        top: -400px
+        right: -400px
     }
 
     100% {
-        top: 0
+        right: 0
     }
 }
 
 @keyframes burger-drop {
     0% {
-        top: -400px
+        right: -150px
     }
 
     100% {
-        top: 40px
+        right: 0
     }
 }
 
