--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -28,7 +28,8 @@
 }
 
 
-.project-card:hover {
+.project-card:hover,
+.event-card:hover {
   box-shadow: 0px 0px 24px 1px #f9c4ff;
   transition: 200ms
 }
