--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -2,10 +2,48 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
 }
 
 .events-body>.img-ctr>img {
     width: 100vw;
+}
+
+.event-page-text,
+.event-page-program-line {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.event-page-program-intermission {
+    font-style: italic;
+}
+
+.event-page-program-line {
+    color: var(--pink-text);
+    border-radius: 12px;
+    padding: 2px 8px;
+    margin: 4px;
+
+}
+
+.event-page-program-line:hover {
+    color: var(--gray-bg);
+    background-color: var(--pink-text);
+    box-shadow: 0 0 10px 2px pink;
+    transition: 300ms;
+}
+
+.event-page-text a {
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.event-desc {
+    width: 80vw;
+    text-align: justify;
 }
 
 .event-card {
@@ -21,19 +59,22 @@
     background-color: var(--pink-text);
     color: var(--gray-bg);
     text-align: center;
-    transition: 200ms
+    transition: 200ms;
+    position: relative
 }
 
 .event-card-desc {
     width: 75%;
     padding: 50px;
     font-size: 1.2rem;
+    margin: 0 auto;
 }
 
 .event-card-l {
-    width: 50%;
+    max-width: 33%;
     position: relative;
 }
+
 
 .event-card-l img {
     width: 100%;
@@ -48,5 +89,11 @@
     .event-card-desc {
         width: 100%;
         padding: 0
+    }
+
+    .event-card-date,
+    .event-card-location {
+        font-size: .8rem;
+        ;
     }
 }
