--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -3,10 +3,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    padding: 0;
 }
+
+.event-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .events-body>.img-ctr>img {
     width: 100vw;
+    margin: 0;
 }
 
 .event-page-text,
@@ -78,6 +87,15 @@
 
 .event-card-l img {
     width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+    .event-card-desc {
+        width: 90%;
+        padding: 4px;
+    }
+
+
 }
 
 @media screen and (max-width: 700px) {
