--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -114,19 +114,19 @@ header {
 
 .my-dropdown-content,
 .work-content {
-    position: relative;
+    position: absolute;
     background: rgba(0, 0, 0, 1);
     width: 150px;
-    min-height: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 2px;
     border: 1px solid var(--pink-text);
 }
 
 .my-dropdown-content {
-    margin-left: auto;
+    margin-left: calc(100% - 150px);
     animation: burger-drop 300ms ease-in-out;
     z-index: -10;
+    position: absolute;
 }
 
 
@@ -172,11 +172,11 @@ header {
 
 @keyframes work-drop {
     0% {
-        right: -400px
+        top: -400px
     }
 
     100% {
-        right: 0
+        top: 0
     }
 }
 
@@ -190,13 +190,7 @@ header {
     }
 }
 
-@media screen and (max-width: 1520px) {
 
-    .work-content {
-        right: -12px;
-    }
-
-}
 
 @media screen and (max-width: 700px) {
     .hamburger {
