--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -31,22 +31,28 @@ header {
 }
 
 .cic-logo {
-    position: absolute;
-    left: 0;
-    top: 0;
     height: 100px;
 }
 
 .my-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     padding: .5rem;
-    width: 60%;
-    align-items: center;
+    width: fit-content;
     background-color: none !important;
+    width: 25vw;
+}
+
+.nav-l {
+    align-items: left;
 
 }
 
+.nav-r {
+    align-items: end;
+}
 
 .nav-btn-text {
     display: inline-block;
@@ -54,7 +60,8 @@ header {
     text-align: center;
     font-size: 1.25rem;
     color: var(--gray-bg);
-    margin-right: 8px;
+    padding: 0;
+    margin: 0;
 }
 
 .nav-btn-text::after {
@@ -63,10 +70,19 @@ header {
     width: 0%;
     height: 2px;
     bottom: 0;
-    left: 0;
     background-color: var(--gray-bg);
     transition: 0.25s ease;
 }
+
+.nav-l .nav-btn-text::after {
+    left: 0;
+}
+
+.nav-r .nav-btn-text::after {
+
+    right: 0;
+}
+
 
 .nav-btn-text:hover::after {
     transition: 0.25s ease;
@@ -75,7 +91,6 @@ header {
 
 .nav-btn-text:hover {
     transition: 0.25s ease;
-    width: 100%;
 }
 
 .Link {
@@ -120,30 +135,37 @@ header {
 .my-dropdown-content,
 .work-content {
     position: absolute;
-    background: rgba(0, 0, 0, 1);
-    width: 150px;
+    background: rgba(0, 0, 0, .9);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 2px;
     border: 1px solid var(--pink-text);
 }
 
+
+.work-content {
+    right: 0;
+    width: 150px;
+}
+
+
+.workbtn {
+    position: relative;
+    cursor: pointer;
+}
+
+
 .my-dropdown-content {
-    margin-left: calc(100% - 150px);
     animation: burger-drop 300ms ease-in-out;
-    z-index: -10;
-    position: absolute;
+    width: 100vw;
+    height: 100vh;
 }
 
-
-.burger-link {
-    display: block;
-}
 
 .burger-link-text {
     display: block;
     padding: 0 16px;
     line-height: 1.25rem;
-    margin: 12px 0;
+    margin: 15% 0;
     text-align: center;
     color: var(--pink-text);
     font-size: 18px;
@@ -151,47 +173,21 @@ header {
 }
 
 .work-link-text {
-    display: block;
+    font-size: 16px;
+    color: var(--pink-text);
+    padding: 2px 4px;
+    width: 100%;
     text-align: center;
-    font-size: 12px;
-    color: var(--pink-text)
 }
 
-.workbtn {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
-}
-
-.work-content p {
-    opacity: 1;
-}
-
-.work-content {
-    margin-top: 56px;
-    cursor: default;
-    animation: work-drop 300ms ease-in-out;
-}
-
-@keyframes work-drop {
-    0% {
-        top: -400px
-    }
-
-    100% {
-        top: 0
-    }
-}
 
 @keyframes burger-drop {
     0% {
-        right: -150px
+        right: -100vw;
     }
 
     100% {
-        right: 0
+        right: 0;
     }
 }
 
