--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -11,7 +11,8 @@
 }
 
 .project-card {
-  width: 25%;
+  position: relative;
+  width: 45%;
   margin: 8px 16px;
   display: flex;
   flex-direction: column;
@@ -55,6 +56,15 @@
   width: 100vw;
 }
 
+.iframe-ctr-card {
+  width: 100%;
+  position: relative;
+  min-height: 25vw;
+  display: flex;
+  justify-content: center;
+  background-color: black;
+}
+
 .secondary-iframe-ctr {
   padding-bottom: 30%;
   position: relative;
@@ -64,7 +74,7 @@
 iframe {
   top: 0;
   left: 0;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   position: absolute;
 }
@@ -189,6 +199,10 @@ iframe {
 
   .page-gif {
     width: 25%;
+  }
+
+  .iframe-ctr-card {
+    min-height: 48vw;
   }
 
 }
