--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -66,7 +66,7 @@
     align-items: center;
     justify-content: space-around;
     box-shadow: 0px 0px 8px 1px var(--pink-text);
-    border-radius: 16px;
+    /* border-radius: 16px; */
     border: 1px solid var(--pink-text);
     padding: 16px;
     background-color: var(--pink-text);
