--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: space-around;
   box-shadow: 0px 0px 8px 1px var(--pink-text);
-  border-radius: 16px;
+  /* border-radius: 16px; */
   border: 1px solid var(--pink-text);
   padding: 16px;
   background-color: var(--pink-text);
@@ -45,7 +45,7 @@
   width: 100%;
   max-height: 100%;
   object-fit: contain;
-  border-radius: 16px;
+  /* border-radius: 16px; */
 }
 
 
@@ -125,13 +125,13 @@ iframe {
   /* background-color: var(--pink-text); */
   color: white;
   width: 85%;
-  border-radius: 16px;
+  /* border-radius: 16px; */
 }
 
 .ens-photo {
   width: 40%;
   object-fit: contain;
-  border-radius: 16px;
+  /* border-radius: 16px; */
 }
 
 .ens-info {
