--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -23,7 +23,7 @@
 
 .cv-btn {
     border-radius: 16px;
-    background-color: var(--pink-text);
+    background-color: var(--blue-text);
     color: white;
     padding: 24px;
     border: 2px solid white;
