--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html,
 body {
   max-width: 100%;
   height: 100vh;
-  color: var(--pink-text);
+  color: var(--blue-text);
   -ms-overflow-style: none;
   scrollbar-width: none;
   /* overflow-x: hidden; hides both scrollbars */
@@ -28,8 +28,8 @@ body {
 button {
   cursor: pointer;
   transition: 200ms;
-  color: var(--pink-text);
-  background-color: var(--gray-bg);
+  color: var(--blue-text);
+  background-color: var(--bg);
   border-radius: 12px;
   border: 1px solid white;
   padding: 4px 8px;
@@ -37,8 +37,8 @@ button {
 
 button:hover {
   transition: 200ms;
-  color: var(--gray-bg);
-  background-color: var(--pink-text);
+  color: var(--bg);
+  background-color: var(--blue-text);
   box-shadow: 0px 0px 24px 1px #f9c4ff;
 }
 
@@ -52,11 +52,11 @@ button:focus {
 }
 
 input {
-  color: var(--gray-bg);
+  color: var(--bg);
 }
 
 input::placeholder {
-  color: var(--gray-bg);
+  color: var(--bg);
 }
 
 .myh3 {
@@ -97,7 +97,7 @@ h1 {
 .App {
   min-height: 100vh;
   max-width: 100vw;
-  background-color: var(--gray-bg);
+  background-color: var(--bg);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -180,12 +180,26 @@ h2 {
 }
 
 .here {
-  background: #ef76a2;
-  animation: animate 10s linear infinite;
+  background: linear-gradient(90deg,
+      var(--rainbow-1),
+      var(--rainbow-2),
+      var(--rainbow-4),
+      var(--rainbow-5),
+      var(--rainbow-6),
+      var(--rainbow-7),
+      var(--rainbow-6),
+      var(--rainbow-5),
+      var(--rainbow-4),
+      var(--rainbow-3),
+      var(--rainbow-2));
+  animation: animate 5s linear infinite;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-decoration: none;
+  background-size: 200% 100%;
+  font-weight: 700;
+  text-shadow: 0px 0px 10px;
 }
 
 
@@ -225,14 +239,12 @@ h2 {
 
 
 @keyframes animate {
-
-  0%,
-  100% {
-    filter: hue-rotate(0deg);
+  0% {
+    background-position: 200% 0%;
   }
 
-  50% {
-    filter: hue-rotate(360deg);
+  100% {
+    background-position: 0% 0%;
   }
 }
 
