--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -31,7 +31,7 @@
 }
 
 .event-page-program-line {
-    color: var(--pink-text);
+    color: var(--blue-text);
     border-radius: 12px;
     padding: 2px 8px;
     margin: 4px;
@@ -39,8 +39,8 @@
 }
 
 .event-page-program-line:hover {
-    color: var(--gray-bg);
-    background-color: var(--pink-text);
+    color: var(--bg);
+    background-color: var(--blue-text);
     box-shadow: 0 0 10px 2px pink;
     transition: 300ms;
 }
@@ -65,12 +65,12 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0px 0px 8px 1px var(--pink-text);
+    box-shadow: 0px 0px 8px 1px var(--blue-text);
     /* border-radius: 16px; */
-    border: 1px solid var(--pink-text);
+    border: 1px solid var(--blue-text);
     padding: 16px;
-    background-color: var(--pink-text);
-    color: var(--gray-bg);
+    background-color: var(--blue-text);
+    color: var(--bg);
     text-align: center;
     transition: 200ms;
     position: relative
