--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,7 @@ header {
     width: 100vw;
     height: 110px;
     position: relative;
-    background-color: var(--pink-text);
+    background-color: var(--blue-text);
     padding: 0;
     /* border: 1px solid red; */
 }
@@ -57,7 +57,7 @@ header {
     position: relative;
     text-align: center;
     font-size: 1.25rem;
-    color: var(--gray-bg);
+    color: var(--bg);
     padding: 0;
     margin: 0;
 }
@@ -68,7 +68,7 @@ header {
     width: 0%;
     height: 2px;
     bottom: 0;
-    background-color: var(--gray-bg);
+    background-color: var(--bg);
     transition: 0.25s ease;
 }
 
@@ -139,7 +139,7 @@ header {
     position: absolute;
     background: rgba(0, 0, 0, .9);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border: 1px solid var(--pink-text);
+    border: 1px solid var(--blue-text);
 }
 
 
@@ -168,14 +168,14 @@ header {
     line-height: 1.25rem;
     margin: 15% 0;
     text-align: center;
-    color: var(--pink-text);
+    color: var(--blue-text);
     font-size: 18px;
     font-weight: bold;
 }
 
 .work-link-text {
     font-size: 16px;
-    color: var(--pink-text);
+    color: var(--blue-text);
     padding: 2px 4px;
     width: 100%;
     text-align: center;
