--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
   font-size: 16px;
 }
 
+/* 
 ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 html,
 body {
@@ -18,7 +19,6 @@ body {
   color: var(--blue-text);
   -ms-overflow-style: none;
   scrollbar-width: none;
-  /* overflow-x: hidden; hides both scrollbars */
 }
 
 .white {
@@ -200,42 +200,62 @@ h2 {
   background-size: 200% 100%;
   font-weight: 700;
   text-shadow: 0px 0px 10px;
+  position: relative;
 }
 
-
-
-
-/* //////////////////////////////////////////////////////////////////////Scroll Bar/////////// */
-#scrollpath {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 10px;
-  height: 100%;
-}
-
-#progressbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 10px;
-  z-index: 100;
-  background: linear-gradient(to top, #008aff, #00ffe7);
-  animation: animate 5s linear infinite;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-#progressbar:before {
+.here:after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, #008aff, #00ffe7);
-  filter: blur(10px);
+  background: linear-gradient(180deg,
+      var(--rainbow-1),
+      var(--rainbow-2),
+      var(--rainbow-4),
+      var(--rainbow-5),
+      var(--rainbow-6),
+      var(--rainbow-7),
+      var(--rainbow-6),
+      var(--rainbow-5),
+      var(--rainbow-4),
+      var(--rainbow-3),
+      var(--rainbow-2));
+  filter: blur(100px);
 }
+
+
+
+
+/* //////////////////////////////////////////////////////////////////////Scroll Bar/////////// */
+#progressbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 10px;
+  z-index: 10;
+  min-height: 100vh;
+  background: var(--scroll-bar);
+}
+
+.scroll-img {
+  max-width: 100%;
+  position: absolute;
+  max-height: 10px;
+  z-index: 0;
+}
+
+/* #progressbar:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--scroll-bar);
+  filter: blur(10px);
+} */
 
 
 @keyframes animate {
@@ -247,6 +267,7 @@ h2 {
     background-position: 0% 0%;
   }
 }
+
 
 .mobile-only {
   display: none;
@@ -276,7 +297,6 @@ h2 {
 
 @media screen and (max-width: 700px) {
 
-  #scrollpath,
   #progressbar {
     width: 2px;
   }
