--- a/src/App.css
+++ b/src/App.css
@@ -233,17 +233,17 @@ h2 {
   position: fixed;
   top: 0;
   right: 0;
-  width: 10px;
+  width: 12px;
   z-index: 10;
   min-height: 100vh;
   background: var(--scroll-bar);
 }
 
 .scroll-img {
-  max-width: 100%;
+  max-width: 200%;
   position: absolute;
-  max-height: 10px;
   z-index: 0;
+  left: -8px
 }
 
 /* #progressbar:before {
