--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,14 @@ header {
   position: absolute;
 }
 
+iframe {
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 .name {
   color: transparent;
   width: fit-content;
