--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -72,14 +72,13 @@
   width: 50vw;
 }
 
-iframe {
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 100%;
+.iframe-load-flower {
+  max-width: 33%;
   position: absolute;
+  top: 16%;
+  left: 33%;
+  animation: rotate-dance 3s linear infinite;
 }
-
 
 .project-info {
   display: flex;
@@ -182,6 +181,16 @@ iframe {
   font-size: .9rem;
   padding: 0;
   margin: 0;
+}
+
+@keyframes rotate-dance {
+  0% {
+    rotate: 0;
+  }
+
+  100% {
+    rotate: 359deg
+  }
 }
 
 @media screen and (max-width: 700px) {
