--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ button:hover {
   transition: 200ms;
   color: var(--bg);
   background-color: var(--blue-text);
-  box-shadow: 0px 0px 24px 1px #f9c4ff;
+  box-shadow: 0px 0px 24px 1px var(--box-glow);
 }
 
 button:focus {
@@ -52,11 +52,11 @@ button:focus {
 }
 
 input {
-  color: var(--bg);
+  color: var(--blue-text);
 }
 
 input::placeholder {
-  color: var(--bg);
+  color: var(--blue-text);
 }
 
 .myh3 {
@@ -119,6 +119,7 @@ iframe {
   min-width: 100%;
   height: 100%;
   position: absolute;
+  border: none;
 }
 
 .name {
@@ -164,6 +165,9 @@ h2 {
   font-size: 48px;
 }
 
+.font700 {
+  font-weight: 700;
+}
 
 .link {
   transition: font-weight 100ms;
@@ -187,7 +191,8 @@ h2 {
   -webkit-background-clip: text;
 }
 
-.here {
+.glow,
+.hover-glow:hover {
   background: linear-gradient(90deg,
       var(--rainbow-1),
       var(--rainbow-2),
@@ -206,12 +211,11 @@ h2 {
   color: transparent;
   text-decoration: none;
   background-size: 200% 100%;
-  font-weight: 700;
-  text-shadow: 0px 0px 10px;
+  /* text-shadow: 0px 0px 10px; */
   position: relative;
 }
 
-.here:after {
+.glow:after {
   content: "";
   position: absolute;
   top: 0;
