--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -40,7 +40,7 @@
 .event-page-program-line:hover {
     color: var(--bg);
     background-color: var(--blue-text);
-    box-shadow: 0 0 10px 2px pink;
+    box-shadow: 0 0 10px 2px var(--box-glow);
     transition: 300ms;
 }
 
@@ -64,12 +64,12 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0px 0px 8px 1px var(--blue-text);
+    box-shadow: 0px 0px 8px 1px var(--box-glow);
     /* border-radius: 16px; */
     border: 1px solid var(--blue-text);
     padding: 16px;
-    background-color: var(--blue-text);
-    color: var(--bg);
+    background-color: var(--box);
+    color: var(--blue-text);
     text-align: center;
     transition: 200ms;
     position: relative
