--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,7 @@ header {
     width: 100vw;
     height: 110px;
     position: relative;
-    background-color: var(--blue-text);
+    background-color: var(--nav-bar);
     padding: 0;
     /* border: 1px solid red; */
 }
@@ -57,7 +57,7 @@ header {
     position: relative;
     text-align: center;
     font-size: 1.25rem;
-    color: var(--bg);
+    color: var(--blue-text);
     padding: 0;
     margin: 0;
 }
