--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -18,12 +18,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  box-shadow: 0px 0px 8px 1px var(--blue-text);
+  box-shadow: 0px 0px 8px 1px var(--box-glow);
   /* border-radius: 16px; */
-  border: 1px solid var(--blue-text);
+  border: 4px solid var(--blue-text);
   padding: 16px;
-  background-color: var(--blue-text);
-  color: var(--bg);
+  background-color: var(--bpx);
+  color: var(--blue-text);
   text-align: center;
   transition: 200ms
 }
@@ -31,7 +31,7 @@
 
 .project-card:hover,
 .event-card:hover {
-  box-shadow: 0px 0px 24px 1px #f9c4ff;
+  box-shadow: 0px 0px 24px 1px var(--box-glow);
   transition: 200ms
 }
 
@@ -63,7 +63,7 @@
   min-height: 25vw;
   display: flex;
   justify-content: center;
-  background-color: black;
+  background-color: var(--box);
 }
 
 .secondary-iframe-ctr {
@@ -113,45 +113,11 @@
   text-align: center;
 }
 
-.ensembles-body {
-  padding: 0;
-  margin: 0;
-}
-
-.ens-card {
-  display: flex;
-  margin: 24px auto;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5%;
-  box-shadow: 0px 0px 8px 1px var(--blue-text);
-  border: 1px solid var(--blue-text);
-  /* background-color: var(--blue-text); */
-  color: white;
-  width: 85%;
-  /* border-radius: 16px; */
-}
-
-.ens-photo {
-  width: 40%;
-  object-fit: contain;
-  /* border-radius: 16px; */
-}
-
-.ens-info {
-  width: 60%;
-  align-self: baseline;
-}
-
-.ens-gif {
-  width: 100px;
-}
-
 .gif-reverse {
   transform: rotateY(180deg);
 }
 
-.ens-title {
+.page-title {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,17 +130,6 @@
   padding-bottom: 6px;
 }
 
-.ens-name {
-  margin: 0;
-  text-align: center;
-  color: var(--blue-text)
-}
-
-.ens-bio {
-  text-align: justify;
-  padding-left: 16px;
-  color: var(--blue-text)
-}
 
 
 .click-for-more {
@@ -205,16 +160,6 @@
 
   .project-card {
     width: 90%;
-  }
-
-  .ens-card {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .ens-info {
-    width: 90%;
-    margin: 8px auto;
   }
 
   .page-gif {
