--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -68,9 +68,9 @@
 }
 
 .secondary-iframe-ctr {
-  padding-bottom: 30%;
+  padding-bottom: 50%;
   position: relative;
-  width: 50vw;
+  width: 90%;
 }
 
 .iframe-load-flower {
