--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,10 +1,11 @@
 .bio-body {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
 .bio-body img {
-    width: 25vw;
+    width: 100%;
 }
 
 .bio-body .press-photo {
@@ -26,6 +27,21 @@
     color: var(--blue-text);
     padding: 0;
     margin-top: 32px;
+}
+
+.overlay-ctr {
+    position: relative;
+    width: 25vw;
+    overflow: hidden;
+}
+
+.overlay-img {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: -220px;
+    left: 0;
+    transition: 200ms;
 }
 
 
