--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -39,7 +39,7 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    top: -220px;
+    top: -50%;
     left: 0;
     transition: 200ms;
 }
