--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@font-face {
+  font-family: Jazfont-Regular;
+  src: url("./styles/fonts/Jazfont-RegularOTF.otf") format("opentype"),
+    url("./styles/fonts/Jazfont-RegularTTF.ttf") format("truetype");
+}
+
 * {
   /* border: 1px solid red; */
   text-decoration: none;
@@ -106,7 +112,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: "Poppins", serif;
+  font-family: "Jazfont-Regular", serif;
   position: relative;
 }
 
@@ -147,19 +153,6 @@ iframe {
   overflow: hidden;
   justify-content: space-between;
   transition: 1000ms ease-in-out
-}
-
-#about-bio {
-  width: 50%;
-  padding: 20px 50px;
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2rem;
-  z-index: 1;
-  box-shadow: 4px 4px 18px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
-  transform: translateX(1300px);
-  transition: 500ms;
 }
 
 .bio-text {
@@ -316,11 +309,6 @@ h2 {
   .about-main {
     flex-direction: column;
     margin-top: 70px;
-  }
-
-
-  #about-bio {
-    width: 75%;
   }
 
   .about-name {
