--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -75,12 +75,14 @@
     position: relative
 }
 
-
+.event-card-title {
+    font-size: var(--large);
+}
 
 .event-card-desc {
     width: 75%;
     padding: 50px;
-    font-size: 1.2rem;
+    font-size: var(--medium);
     margin: 0 auto;
 }
 
@@ -95,6 +97,11 @@
 
 .event-card-series {
     margin-top: 2px;
+    font-size: var(--small);
+}
+
+.event-card-presenter {
+    font-size: var(--medium);
 }
 
 .event-card-l img {
@@ -118,7 +125,8 @@
 
     .event-card-desc {
         width: 100%;
-        padding: 0
+        padding: 0;
+        font-size: var(--small)
     }
 
     .event-card-date,
