--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ button {
   border-radius: 12px;
   border: 1px solid white;
   padding: 4px 8px;
+  font-size: var(--small);
 }
 
 button:hover {
@@ -160,7 +161,7 @@ h2 {
 }
 
 .font700 {
-  font-weight: 700;
+  font-size: var(--medium)
 }
 
 .link {
