--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -24,6 +24,10 @@
     font-size: 32px;
 }
 
+span.bio {
+    font-size: var(--large)
+}
+
 hr {
     width: 85%;
     margin-top: 32px;
@@ -68,7 +72,11 @@ label {
     }
 
     .home-bio {
-        font-size: 1.2rem;
+        font-size: var(--small);
+    }
+
+    span.bio {
+        font-size: var(--medium)
     }
 
 
