--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ button {
   border-radius: 12px;
   border: 1px solid white;
   padding: 4px 8px;
-  font-size: var(--small);
+  font-size: var(--small)!important;
+
 }
 
 button:hover {
