--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -29,6 +29,7 @@ header {
     background: url("../../public/assets/BannerNoFlowersTrans.PNG");
     background-size: contain;
     background-repeat: no-repeat;
+    transition: 400ms;
 }
 .cic-logo:hover {
     background: url("../../public/assets/BannerFlowersTrans.PNG");
