--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: var(--small);
 }
 
 
@@ -51,6 +52,7 @@
 
 .video-caption {
     margin-top: 4px;
+    font-size: var(--small);
 }
 
 .event-desc {
